--- a/site/css/style.css
+++ b/site/css/style.css
@@ -9,6 +9,7 @@
             font-family: 'Open Sans', sans-serif;
             background-color: black;
             color: white;
+            overflow-x: hidden;
         }
         /*header*/
         
